@@ -1,3 +1,13 @@
+2017-10-15 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCdebug.h,
+	  src/SDCCdwarf2.c,
+	  src/cdbFile.c,
+	  src/stm8/gen.c,
+	  src/stm8/ralloc.c,
+	  src/stm8/ralloc.h:
+	  STM8 rame address debug info, based on patch by Åke Rehnman.
+
 2017-10-11 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/gcc-torture-execute-920922-1.c,
